LineSpacingHighlighter removed, not needed with the new font. Added FontUtils to load custom fonts. ParentPanel now has constant Strings to use with FontUtils. Scrolling in ConfigPanel works, yay! Version increased to 0.2.0